# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swaps-rv"
version = "0.1.2"  # synced with setup.py after KKT + packaging fixes
description = "Tiered Gaussian‑Process + ANN framework for fixed‑income RV research (risk‑free build)"
readme = "README.md"
authors = [{ name = "Your-Desk-Quant-Team", email = "rates-rv@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "jax[cpu]>=0.4",
  "dm-haiku>=0.0.11",
  "optax>=0.1.7",
  "numba>=0.59",
  "matplotlib>=3.8",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.3",
  "ruff>=0.3",
  "ipython",
]

# --------------------------------------------------------------------------
# setuptools‑specific configuration (src‑layout)
# --------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# --------------------------------------------------------------------------
# Tooling configs
# --------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]
