[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "fixed-income-rv"
version         = "0.1.0"
description     = "Tiered Gaussian-process + ANN framework for relative-value fixed-income research"
readme          = "README.md"
authors         = [
  { name = "Your-Desk-Quant-Team", email = "rates-rv@example.com" }
]
license         = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "jax[cpu]>=0.4",
  "haiku>=0.0.9",        # lightweight NN wrapper
  "optax>=0.1.7",
  "numba>=0.59",
  "matplotlib>=3.8",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.3",
  "ruff>=0.3",
  "ipython",
]

[tool.setuptools.packages.find]
where = ["src"]          # same root as in README layout

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]
