# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swaps-rv"                       # Distribution / wheel name (hyphen OK)
version = "0.1.1"                       # â† bumped: risk helpers removed
description = "Tiered Gaussian-process + ANN framework for fixed-income RV (no-risk build)"
readme = "README.md"
authors = [{ name = "Your-Desk-Quant-Team", email = "rates-rv@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "jax[cpu]>=0.4",
  "dm-haiku >= 0.0.9",
  "optax>=0.1.7",
  "numba>=0.59",
  "matplotlib>=3.8",
  "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.3",
  "ruff>=0.3",
  "ipython",
]

# --- setuptools-specific section -------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]            # look for packages in ./src

[tool.setuptools.package-dir]
"" = "src"                 # map import root '' to ./src
# ---------------------------------------------------------------------------

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]
